create account completed

--- a/School/src/main/resources/application-git.properties
+++ b/School/src/main/resources/application-git.properties
@@ -10,3 +10,4 @@
 #
 #debug=<True if it is in devepopment stage>
 #logging.level.org.springframework.boot.autoconfigure.logging=INFO
+#signup.token.expiration.hours=72
