book issue service updated

--- a/School/src/main/resources/application-git.properties
+++ b/School/src/main/resources/application-git.properties
@@ -11,3 +11,8 @@
 #debug=<True if it is in devepopment stage>
 #logging.level.org.springframework.boot.autoconfigure.logging=INFO
 #signup.token.expiration.hours=72
+#
+#
+#data.maxsize=20  <pagination size>
+#
+#days.for.book=15  <Book need to return in days>
